--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,21 @@
 
 	<header>
 
+		<form action="" class="header__search form-search">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-10 col-sm-11 col-header-search">
+						<input class="header__search__input" type="text" name="search" placeholder="Поиск">
+						<input type="submit" class="header__search__submit">
+						<p class="header__search_extra"><a href="#">Расширенный поиск</a><a href="#">Поиск документов</a></p>
+					</div>
+					<div class="col-xs-2 col-sm-1">
+						<span class="icon-x">x</span>
+					</div>
+				</div>
+			</div>
+		</form>
+
 		<div class="header__mid">
 			<div class="container">
 				<div class="row">
@@ -57,13 +72,13 @@
 					<div class="col-xs-5 col-mobile-icons">
 						<div class="mobile-icons">
 							<a href="#"><i class="sprite-main sprite-main_mobile-glass"></i></a>
-							<i class="sprite-main sprite-main_mobile-loop"></i>
+							<i class="sprite-main sprite-main_mobile-loop open-search"></i>
 							<i class="sprite-main sprite-main_mobile-menu menu-btn"></i>
 						</div>
 					</div>
 					<div class="col-sm-4 col-lg-3 col-extra">
 						<div class="extra-block">
-							<i class="sprite-main sprite-main_loop"></i>
+							<i class="sprite-main sprite-main_loop open-search"></i>
 							<a href="#" class="sprite-descr">
 								<i class="sprite-main sprite-main_glass"></i><h4 class="text_underline text_black">Для слабовидящих</h4>
 							</a>
