--- a/app/2.1.html
+++ b/app/2.1.html
@@ -40,7 +40,6 @@
 
 <body>
 
-
 	<header>
 
 		<form action="" class="header__search form-search">
@@ -213,30 +212,62 @@
 
 
 	<main>
-
+		
 		<div class="container">
 			
 			<nav class="breadcrump">
 				<ul>
 					<li><a href="/">Главная</a></li>
-					<li>О ведомстве</li>
+					<li>Деятельность</li>
+					<li>Технический заказ</li>
 				</ul>
 			</nav>
 
 			<div class="row">
 
 				<article class="col-md-9">
-					<h1>Открытые данные</h1>
-					<p><b>В настоящем разделе представлена информация о деятельности Министерства строительства и жилищно-коммунального хозяйства Российской Федерации, размещаемая в сети "Интернет" в форме открытых данных.</b></p>
-					<p>Размещение государственными органами и органами местного самоуправления информации о своей деятельности в сети "Интернет" в форме открытых данных - форма размещения государственными органами и органами местного самоуправления информации о своей деятельности в сети "Интернет", при которой указанная информация размещается в сети "Интернет" в виде массивов данных, организованных в формате, обеспечивающем их автоматическую обработку в целях повторного использования без предварительного изменения человеком (машиночитаемый формат), и на условиях ее свободного использования.</p>
-					<p>Размещение государственными органами и органами местного самоуправления информации о своей деятельности в сети "Интернет" в форме открытых данных осуществляется в рамках реализации подпункта "г" пункта 2 Указа Президента Российской Федерации от 7 мая 2012 года № 601 "Об основных направлениях совершенствования системы государственного управления".</p>
-					<h4><b>Условия использования:</b></h4>
-					<p>Пользователь может использовать (в том числе повторно) открытые данные свободно, бесплатно, бессрочно, безвозмездно и без ограничения территории использования, в том числе имеет право копировать, публиковать, распространять открытые данные, видоизменять открытые данные и объединять их с другой информацией, использовать открытые данные в коммерческих целях, использовать для создания программ для ЭВМ и приложений.</p>
-					<h4><b>При использовании открытых данных Пользователь обязан:</b></h4>
-					<p>использовать открытые данные только в законных целях;<br>не искажать открытые данные при их использовании;<br>сохранять ссылку на источник информации при использовании открытых данных.</p>
-					<a href="#">Реестр открытых данных</a>
-					<h4>Количество загрузок файла реестра: 63</h4>
-					<h4>Количество просмотров реестра открытых данных: 49281</h4>
+					<h1>Технический заказ</h1>
+					<p>Технический заказчик по своей сути выполняет одну основную, главную, функцию – реализует принятое собственником решение относительно его недвижимости. Все остальное в работе технического заказчика является производным от конкретной цели, поставленной перед ним. Конкретное наполнение зависит от многих факторов – жизненного цикла объекта недвижимости и его технического состояния, его окружения, тенденций рынка, действующим законодательством, сроков и т.д. </p>
+					<ul class="file-list">
+						<li>
+							<i class="sprite-main sprite-main_pdf"></i>
+							<div class="file-list__descr">
+								<p class="file-list__head">Положение технического заказа</p>
+								<p>
+									<a href="#" target="_blank"><i class="sprite-main sprite-main_show"></i>Смотреть</a>
+									<a href="#" target="_blank" download=""><i class="sprite-main sprite-main_download"></i>Скачать (379.92 КБ)</a>
+								</p>
+							</div>
+						</li>
+					</ul>
+					<p class="open-panels__head"><i class="sprite-main sprite-main_home"></i>Департамент технического заказа</p>
+					<ul class="open-panels">
+						<li>
+							<p class="open-panels__link">НАЗВАНИЕ 1</p>
+							<div class="open-panels__hide">Контент</div>
+						</li>
+						<li>
+							<p class="open-panels__link">НАЗВАНИЕ 2</p>
+							<div class="open-panels__hide">Контент</div>
+						</li>
+						<li>
+							<p class="open-panels__link">НАЗВАНИЕ 3</p>
+							<div class="open-panels__hide">Контент</div>
+						</li>
+					</ul>
+					
+					<h2>Формы для заполнения отчета 1493-Р</h2>
+					<ul class="file-list">
+						<li>
+							<i class="sprite-main sprite-main_pdf"></i>
+							<div class="file-list__descr">
+								<p class="file-list__head">Положение №1 к Отчёту по исполнению распоряжения Правительства РФ от 22 августа 2011г. №1493-Р</p>
+								<p>
+									<a href="#" target="_blank" download=""><i class="sprite-main sprite-main_download"></i>Скачать (379.92 КБ)</a>
+								</p>
+							</div>
+						</li>
+					</ul>
 				</article>
 
 				<aside class="col-md-3">
@@ -258,33 +289,6 @@
 					</div>
 				</aside>
 
-				<article class="col-md-12 col-md">
-					<h4><b>Искать в открытых данных:</b></h4>
-					<form class="form_search-file form_search-csv" action="">
-						<input type="text" class="search-csv__input">
-						<input type="submit" value="Найти" class="submit_blue">
-						<h4>Всего наборов открытых данных: 37. Из них 37 в формате CSV</h4>
-					</form>
-					<div class="table-wrapper">
-						<table class="csv-table">
-							<thead>
-								<tr>
-									<td>№</td>
-									<td>Наименование набора данных</td>
-									<td>Обновлено</td>
-									<td>Формат представления</td>
-								</tr>
-							</thead>
-							<tr>
-								<td>1.</td>
-								<td><a href="#">Статистическая информация по результатам плановых и внеплановых проверок</a></td>
-								<td>15 Января 2016 12:19 (2)</td>
-								<td>CSV</td>
-							</tr>
-						</table>
-					</div>
-				</div>
-
 			</div>
 
 
@@ -292,7 +296,7 @@
 
 
 	</main>
-
+	
 
 
 	<footer>
@@ -331,7 +335,7 @@
 
 			</div><!-- End row -->
 		</div><!-- End container -->
-
+		
 	</footer>
 
 	<!--[if lt IE 9]>
