--- a/app/4.html
+++ b/app/4.html
@@ -213,77 +213,77 @@
 
 
 	<main>
-
+		
 		<div class="container">
 			
 			<nav class="breadcrump">
 				<ul>
 					<li><a href="/">Главная</a></li>
-					<li>О ведомстве</li>
+					<li>Документы</li>
 				</ul>
 			</nav>
 
 			<div class="row">
 
 				<article class="col-md-9">
-					<h1>Открытые данные</h1>
-					<p><b>В настоящем разделе представлена информация о деятельности Министерства строительства и жилищно-коммунального хозяйства Российской Федерации, размещаемая в сети "Интернет" в форме открытых данных.</b></p>
-					<p>Размещение государственными органами и органами местного самоуправления информации о своей деятельности в сети "Интернет" в форме открытых данных - форма размещения государственными органами и органами местного самоуправления информации о своей деятельности в сети "Интернет", при которой указанная информация размещается в сети "Интернет" в виде массивов данных, организованных в формате, обеспечивающем их автоматическую обработку в целях повторного использования без предварительного изменения человеком (машиночитаемый формат), и на условиях ее свободного использования.</p>
-					<p>Размещение государственными органами и органами местного самоуправления информации о своей деятельности в сети "Интернет" в форме открытых данных осуществляется в рамках реализации подпункта "г" пункта 2 Указа Президента Российской Федерации от 7 мая 2012 года № 601 "Об основных направлениях совершенствования системы государственного управления".</p>
-					<h4><b>Условия использования:</b></h4>
-					<p>Пользователь может использовать (в том числе повторно) открытые данные свободно, бесплатно, бессрочно, безвозмездно и без ограничения территории использования, в том числе имеет право копировать, публиковать, распространять открытые данные, видоизменять открытые данные и объединять их с другой информацией, использовать открытые данные в коммерческих целях, использовать для создания программ для ЭВМ и приложений.</p>
-					<h4><b>При использовании открытых данных Пользователь обязан:</b></h4>
-					<p>использовать открытые данные только в законных целях;<br>не искажать открытые данные при их использовании;<br>сохранять ссылку на источник информации при использовании открытых данных.</p>
-					<a href="#">Реестр открытых данных</a>
-					<h4>Количество загрузок файла реестра: 63</h4>
-					<h4>Количество просмотров реестра открытых данных: 49281</h4>
+					<h1>Документы</h1>
+
+					<form action="" class="form-doc-search">
+						<input type="text" name="search" class="input_doc-search" placeholder="Поиск по документам">
+						<i class="sprite-main sprite-main_doc-search"></i>
+						<div class="select-group">
+							<select>
+								<option selected disabled>ДОКУМЕНТЫ ПО ТИПУ</option>
+								<option>Пункт 2</option>
+								<option>Пункт 3</option>
+							</select>
+							<select>
+								<option selected disabled>ДОКУМЕНТЫ ПО ДЕПАРТАМЕНТАМ</option>
+								<option>Пункт 2</option>
+								<option>Пункт 3</option>
+							</select>
+						</div>
+							<input type="submit" class="btn btn_doc-search btn_doc-search_submit" value="Применить фильтр">
+							<input type="reset" class="btn btn_doc-search btn_doc-search_reset" value="Сбросить фильтр">
+					</form>
+
+					<h2>1 Документ</h2>
+					<ul class="file-list">
+						<li>
+							<i class="sprite-main sprite-main_pdf"></i>
+							<div class="file-list__descr">
+								<p class="file-list__head">Положение о Министерстве строительства и жилищно-коммунального хозяйства Российской Федерации</p>
+								<p>
+									<a href="#" target="_blank"><i class="sprite-main sprite-main_show"></i>Смотреть</a>
+									<a href="#" target="_blank" download=""><i class="sprite-main sprite-main_download"></i>Скачать (379.92 КБ)</a>
+								</p>
+							</div>
+						</li>
+						<li>
+							<i class="sprite-main sprite-main_pdf"></i>
+							<div class="file-list__descr">
+								<p class="file-list__head">Положение о Министерстве строительства и жилищно-коммунального хозяйства Российской Федерации</p>
+								<p>
+									<a href="#" target="_blank"><i class="sprite-main sprite-main_show"></i>Смотреть</a>
+									<a href="#" target="_blank" download=""><i class="sprite-main sprite-main_download"></i>Скачать (379.92 КБ)</a>
+								</p>
+							</div>
+						</li>
+					</ul>
 				</article>
 
 				<aside class="col-md-3">
-					<div class="widget-news">
-						<h3 class="news__head">Новости</h3>
-						<div class="news-block">
-							<div class="news-date">17 июня, 14:40</div>
-							<a href="#" class="text_black"><p>Минстрой России и Газпром будут сотрудничать в сфере инновационного развития</p></a>
-						</div>
-						<div class="news-block">
-							<div class="news-date">17 июня, 14:40</div>
-							<a href="#" class="text_black"><p>Минстрой России и Газпром будут сотрудничать в сфере инновационного развития</p></a>
-						</div>
-						<div class="news-block">
-							<div class="news-date">17 июня, 14:40</div>
-							<a href="#" class="text_black"><p>Минстрой России и Газпром будут сотрудничать в сфере инновационного развития</p></a>
-						</div>
-						<a href="#" class="btn btn_all-news">Все новости Ведомства</a>
-					</div>
-				</aside>
-
-				<article class="col-md-12 col-md">
-					<h4><b>Искать в открытых данных:</b></h4>
-					<form class="form_search-file form_search-csv" action="">
-						<input type="text" class="search-csv__input">
-						<input type="submit" value="Найти" class="submit_blue">
-						<h4>Всего наборов открытых данных: 37. Из них 37 в формате CSV</h4>
-					</form>
-					<div class="table-wrapper">
-						<table class="csv-table">
-							<thead>
-								<tr>
-									<td>№</td>
-									<td>Наименование набора данных</td>
-									<td>Обновлено</td>
-									<td>Формат представления</td>
-								</tr>
-							</thead>
-							<tr>
-								<td>1.</td>
-								<td><a href="#">Статистическая информация по результатам плановых и внеплановых проверок</a></td>
-								<td>15 Января 2016 12:19 (2)</td>
-								<td>CSV</td>
-							</tr>
+					<div class="widget-panel">
+						<p class="calendar__date">ИЮНЬ 2016</p>
+						<table class="table-calendar">
+							<tr class="date-name"><td>ПН</td><td>ВТ</td><td>СР</td><td>ЧТ</td><td>ПТ</td><td>СБ</td><td>ВС</td></tr>
+							<tr><td class="date_active">1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
+							<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
+							<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
+							<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
 						</table>
 					</div>
-				</div>
+				</aside>
 
 			</div>
 
@@ -292,7 +292,7 @@
 
 
 	</main>
-
+	
 
 
 	<footer>
@@ -331,7 +331,7 @@
 
 			</div><!-- End row -->
 		</div><!-- End container -->
-
+		
 	</footer>
 
 	<!--[if lt IE 9]>
