Add contrast version

--- a/app/1.2.html
+++ b/app/1.2.html
@@ -28,12 +28,14 @@
 	<script>loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" );</script>
 	<script>loadCSS( "css/header.min.css?ver=1.0.0", false, "all" );</script>
 	<script>loadCSS( "css/main.min.css?ver=1.0.0", false, "all" );</script>
+	<script>loadCSS( "css/contrast.min.css?ver=1.0.0", false, "all" );</script>
 	<!-- Load CSS End -->
 
 	<!-- Load CSS Compiled without JS -->
 	<noscript>
 		<link rel="stylesheet" href="css/fonts.min.css">
 		<link rel="stylesheet" href="css/main.min.css">
+		<link rel="stylesheet" href="css/contrast.min.css">
 	</noscript>
 
 </head>
@@ -273,7 +275,7 @@
 								<div class="news-date">17 июня, 14:40</div>
 								<a href="#" class="text_black"><p>Минстрой России и Газпром будут сотрудничать в сфере инновационного развития</p></a>
 							</div>
-						<a href="#" class="btn btn_all-news">Все новости Ведомства</a>
+						<a href="#" class="btn btn_all-news">Все новости</a>
 					</div>
 				</aside>
 
