--- a/app/3.1.html
+++ b/app/3.1.html
@@ -29,6 +29,7 @@
 	<script>loadCSS( "css/header.min.css?ver=1.0.0", false, "all" );</script>
 	<script>loadCSS( "libs/fancybox/jquery.fancybox.css", false, "all" );</script><!-- Дополнительные файлы -->
 	<script>loadCSS( "css/main.min.css?ver=1.0.0", false, "all" );</script>
+	<script>loadCSS( "css/contrast.min.css?ver=1.0.0", false, "all" );</script>
 	<!-- Load CSS End -->
 
 	<!-- Load CSS Compiled without JS -->
@@ -36,6 +37,7 @@
 		<link rel="stylesheet" href="css/fonts.min.css">
 		<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css"><!-- Дополнительные файлы -->
 		<link rel="stylesheet" href="css/main.min.css">
+		<link rel="stylesheet" href="css/contrast.min.css">
 	</noscript>
 
 </head>
@@ -307,13 +309,13 @@
 						</table>
 					</div>
 
-					<div class="widget-panel widget-subscribe">
+					<!-- <div class="widget-panel widget-subscribe">
 						<p>ПОДПИСКА НА НОВОСТИ</p>
 						<form action="" class="form-subscribe">
 							<input type="text" name="email" placeholder="Введите E-mail" class="input_subscribe">
 							<input type="submit" value="Подписаться" class="submit_grey">
 						</form>
-					</div>
+					</div> -->
 
 				</aside>
 
