--- a/app/lk.html
+++ b/app/lk.html
@@ -215,156 +215,39 @@
 
 
 	<main>
+		
 		<div class="container">
 			
 			<nav class="breadcrump">
 				<ul>
 					<li><a href="/">Главная</a></li>
-					<li>О ведомстве</li>
-					<li>Руководство</li>
+					<li>Личный кабинет</li>
 				</ul>
 			</nav>
 
-			<section class="leadership">
-				<h1>Руководство</h1>
-				<ul class="list-leadership">
-					<li class="row">
-						<div class="col-md-3">
-							<img class="thumbnail-leadership" src="img/thumbnail-leadership-big.jpg" alt="">
-						</div>
-						<div class="col-md-9">
-							<div class="leadership__block leadership__block_big">
-								<h3 class="leadership-name leadership-name_big">Васюков Александр Николаевич</h3>
-								<p class="leadership-descr leadership-descr_big">Директор федерального автономного учреждения «РосКапСтрой»</p>
-								<a href="#" class="btn btn_grey">Биография</a>
-							</div>
-						</div>
-					</li>
-				</ul>
-				<ul class="list-leadership">
-					<li class="row">
-						<div class="col-md-2">
-							<img class="thumbnail-leadership" src="img/thumbnail-leadership.jpg" alt="">
-						</div>
-						<div class="col-md-10">
-							<div class="leadership__block">
-								<h3 class="leadership-name">Васюков Александр Николаевич</h3>
-								<p class="leadership-descr">Заместитель директора</p>
-								<a href="#" class="btn btn_grey">Биография</a>
-							</div>
-						</div>
-					</li>
-					<li class="row">
-						<div class="col-md-2">
-							<img class="thumbnail-leadership" src="img/thumbnail-leadership.jpg" alt="">
-						</div>
-						<div class="col-md-10">
-							<div class="leadership__block">
-								<h3 class="leadership-name">Васюков Александр Николаевич</h3>
-								<p class="leadership-descr">Заместитель директора</p>
-								<a href="#" class="btn btn_grey">Биография</a>
-							</div>
-						</div>
-					</li>
-				</ul>
-				<ul class="list-leadership list-leadership_icons">
-					<li class="row">
-					<div class="col-md-2">
-							<img class="thumbnail-leadership" src="img/thumbnail-leadership.jpg" alt="">
-						</div>
-						<div class="col-md-10">
-							<div class="leadership__block">
-								<h3 class="leadership-name">Васюков Александр Николаевич</h3>
-								<p class="leadership-descr">Заместитель директора</p>
-								<p class="leadership-icon">
-									<i class="sprite-main sprite-main_department"></i>
-									<span>Административно-кадровый департамент</span>
-								</p>
-								<p class="leadership-icon">
-									<i class="sprite-main sprite-main_department_add"></i>
-									<span>Административно-кадровый департамент</span>
-								</p>
-							</div>
-						</div>
-					</li>
-					<li class="row">
-					<div class="col-md-2">
-							<img class="thumbnail-leadership" src="img/thumbnail-leadership.jpg" alt="">
-						</div>
-						<div class="col-md-10">
-							<div class="leadership__block">
-								<h3 class="leadership-name">Васюков Александр Николаевич</h3>
-								<p class="leadership-descr">Заместитель директора</p>
-								<p class="leadership-icon">
-									<i class="sprite-main sprite-main_department"></i>
-									<span>Административно-кадровый департамент</span>
-								</p>
-								<p class="leadership-icon">
-									<i class="sprite-main sprite-main_department_add"></i>
-									<span>Административно-кадровый департамент</span>
-								</p>
-							</div>
-						</div>
-					</li>
-				</ul>
-			</section><!-- leadership -->
+			<h1>Личный кабинет</h1>
+			
+			<div class="cabinet-page">
+				<h3><b>ВОЙТИ НА САЙТ ЧЕРЕЗ ЕСИА (ПОРТАЛ ГОСУСЛУГ)</b> <br> Вы можете войти на сайт через личный кабинет на портале государственных услуг. Для входа нажмите на значок.</h3>
+				<div class="btn_large-outer"><a href="#" class="btn btn_large">Войти через ЕСИА</a></div>
+				<h3><b>ВОЙТИ НА САЙТ ЧЕРЕЗ ЛИЧНЫЙ КАБИНЕТ НА САЙТЕ ПРЕЗИДЕНТА РОССИИ</b> <br> Вы можете войти на сайт, используя вашу учётную запись на сайте Президента России. Это позволит вам смотреть ваши обращения, отправленные через сайт Президента. Для входа нажмите на значок справа.</h3>
+				<div class="btn_large-outer"><a href="#" class="btn btn_large">ВОЙТИ ЧЕРЕЗ САЙТ ПРЕЗИДЕНТА РОССИИ</a></div>
+				<h3><b>ВОЙТИ НА САЙТ С ЛОГИНОМ И ПАРОЛЕМ</b></h3>
 
-			<section class="departments_grey">
-				<h2 class="departments_grey_head">Департаменты</h2>
-				<ul class="departments_grey__list">
-					<a href="#">
-						<li>
-							<i class="sprite-departments sprite-departments_1"></i>
-							<p class="departments_grey_text">Департамент разрешительной деятельности и контроля</p>
-						</li>
-					</a>
-					<a href="#">
-						<li>
-							<i class="sprite-departments sprite-departments_2"></i>
-							<p class="departments_grey_text">Административно-кадровый департамент</p>
-						</li>
-					</a>
-					<a href="#">
-						<li>
-							<i class="sprite-departments sprite-departments_3"></i>
-							<p class="departments_grey_text">Департамент ценообразования и градостроительного зонирования</p>
-						</li>
-					</a>
-					<a href="#">
-						<li>
-							<i class="sprite-departments sprite-departments_4"></i>
-							<p class="departments_grey_text">Департамент жилищной политики</p>
-						</li>
-					</a>
-					<a href="#">
-						<li>
-							<i class="sprite-departments sprite-departments_5"></i>
-							<p class="departments_grey_text">Правовой департамент</p>
-						</li>
-					</a>
-					<a href="#">
-						<li>
-							<i class="sprite-departments sprite-departments_6"></i>
-							<p class="departments_grey_text">Департамент жилищно-коммунального хозяйства</p>
-						</li>
-					</a>
-					<a href="#">
-						<li>
-							<i class="sprite-departments sprite-departments_7"></i>
-							<p class="departments_grey_text">Департамент финансов</p>
-						</li>
-					</a>
-					<a href="#">
-						<li>
-							<i class="sprite-departments sprite-departments_8"></i>
-							<p class="departments_grey_text">Департамент градостроительной деятельности и архитектуры</p>
-						</li>
-					</a>
-				</ul>
-			</section><!-- departments_grey -->
+				<form action="" class="form-login">
+					<input type="email" placeholder="E-mail" class="form-login_input">
+					<input type="password" placeholder="Пароль" class="form-login_input">
+					<input type="submit" value="Войти" placeholder="Пароль" class="btn form-login__btn form-login_input">
+				</form>
+				<p><a href="#">Забыли свой пароль?</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#">Зарегистрироваться</a></p>
+				<p>Если вы впервые на сайте, заполните, пожалуйста, регистрационную форму.</p>
+			</div>
 
 
 		</div><!-- container -->
+
+
+
 	</main>
 	
 
