--- a/app/3.5.html
+++ b/app/3.5.html
@@ -29,6 +29,7 @@
 	<script>loadCSS( "css/header.min.css?ver=1.0.0", false, "all" );</script>
 	<script>loadCSS( "libs/fancybox/jquery.fancybox.css", false, "all" );</script><!-- Дополнительные файлы -->
 	<script>loadCSS( "css/main.min.css?ver=1.0.0", false, "all" );</script>
+	<script>loadCSS( "css/contrast.min.css?ver=1.0.0", false, "all" );</script>
 	<!-- Load CSS End -->
 
 	<!-- Load CSS Compiled without JS -->
@@ -36,6 +37,7 @@
 		<link rel="stylesheet" href="css/fonts.min.css">
 		<link rel="stylesheet" href="libs/fancybox/jquery.fancybox.css"><!-- Дополнительные файлы -->
 		<link rel="stylesheet" href="css/main.min.css">
+		<link rel="stylesheet" href="css/contrast.min.css">
 	</noscript>
 
 </head>
@@ -252,14 +254,6 @@
 							<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
 							<tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td><td>7</td></tr>
 						</table>
-					</div>
-
-					<div class="widget-panel widget-subscribe">
-						<p>ПОДПИСКА НА НОВОСТИ</p>
-						<form action="" class="form-subscribe">
-							<input type="text" name="email" placeholder="Введите E-mail" class="input_subscribe">
-							<input type="submit" value="Подписаться" class="submit_grey">
-						</form>
 					</div>
 
 				</aside>
