--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,14 @@
 	<script>loadLocalStorageCSS( "webfonts", "css/fonts.min.css?ver=1.0.0" );</script>
 	<script>loadCSS( "css/header.min.css?ver=1.0.0", false, "all" );</script>
 	<script>loadCSS( "css/main.min.css?ver=1.0.0", false, "all" );</script>
+	<script>loadCSS( "css/contrast.min.css?ver=1.0.0", false, "all" );</script>
 	<!-- Load CSS End -->
 
 	<!-- Load CSS Compiled without JS -->
 	<noscript>
 		<link rel="stylesheet" href="css/fonts.min.css">
 		<link rel="stylesheet" href="css/main.min.css">
+		<link rel="stylesheet" href="css/contrast.min.css">
 	</noscript>
 
 </head>
@@ -79,7 +81,7 @@
 					<div class="col-sm-4 col-lg-3 col-extra">
 						<div class="extra-block">
 							<i class="sprite-main sprite-main_loop open-search"></i>
-							<a href="#" class="sprite-descr">
+							<a href="#" class="sprite-descr versionContrastActivator">
 								<i class="sprite-main sprite-main_glass"></i><h4 class="text_underline text_black">Для слабовидящих</h4>
 							</a>
 						</div>
